se agrego el filtro por categoria 2

--- a/src/componentes/Navbar/Navbar.scss
+++ b/src/componentes/Navbar/Navbar.scss
@@ -57,11 +57,11 @@
             }
             .navbar_menu_desple{
                 font-size: 20px;
-                background-color: purple;
+                
                 text-transform: uppercase;
                 cursor: pointer;
                 font-weight: 700;
-                color: white;
+                color: purple;
             }
         }    
     }
