--- a/src/componentes/CartWidget/CartWidget.scss
+++ b/src/componentes/CartWidget/CartWidget.scss
@@ -3,6 +3,8 @@
     align-items: center;
     gap: 4px;
     cursor:pointer;
+    visibility: hidden;
+    opacity: 0;
 
     .cart-icon{
         color: white;
@@ -16,5 +18,10 @@
         padding: 1px 4px 1px 4px;
         margin-bottom: 20px;
         
+    }
+    &-active{
+        visibility: visible ;
+        opacity: 1;
+        transition: all .3s;
     }
 }
