--- a/src/componentes/Navbar/Navbar.scss
+++ b/src/componentes/Navbar/Navbar.scss
@@ -65,6 +65,15 @@
             }
         }    
     }
+    .user {
+        max-width: 900px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: white;
+        padding: 20px;
+    }
 }
 
 
